# ABBHackathon

./: .gitignore  hello.py  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: 00_view_data.ipynb  01_fe_01.ipynb
src/: create_folds.py  model_dispatcher.py  predict_and_submit.py  train_folds.py
