[project]
name = "abbhackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "feature-engine>=1.8.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "ruff>=0.11.10",
]
